<?xml version="1.0"?>
<package format="2">
  <name>ros_tracker</name>
  <version>0.0.0</version>
  <description>The ros_tracker package</description>


  <maintainer email="greendaddy@todo.todo">greendaddy</maintainer>



  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>

  </export>
</package>
